src/test/literales_identificadores/error_ident_no_declarado.cps
// ❌ Uso de identificadores no declarados.

let a: integer = 1; // ok

b = a;              // error: 'b' no está declarada (asignación a variable inexistente)
c;                  // error: 'c' no está declarada (uso de identificador en una expresión)
